Fixed right margin on mobile view

--- a/style.css
+++ b/style.css
@@ -344,17 +344,21 @@ textarea {
 
 /* for iPhone */
 @media only screen and (max-width: 600px) {
+  html,
   body {
     overflow-x: hidden;
   }
 
   body {
-    margin: 0;
-    background: red;
+    /* background: red; */
   }
 
   .hero {
     max-width: 100%;
+  }
+
+  #innerBox {
+    width: 100%;
   }
 
   #toolbox {
@@ -362,13 +366,12 @@ textarea {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 30px;
   }
 
   #toolIconsDiv {
     display: grid;
     grid-template-columns: repeat(3, auto);
-    column-gap: 40px;
-    margin: 20px;
     color: #333;
   }
 
